--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -76,6 +76,7 @@
 @import "ember-appuniversum/c-textarea";
 @import "ember-appuniversum/c-toolbar";
 @import "ember-appuniversum/c-data-table";
+@import "ember-appuniversum/c-dropdown";
 
 
 // PROJECT COMPONENTS
