Implement switch role button
The switch role button should allow users to log in for various roles.
For this, the user is returned to the switch role route in which they
can select the role they want to act through.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,7 +5,7 @@
   {{!-- @TODO: Add username variable --}}
   <AuDropdown @dropdownTitle="Username" @dropdownButtonLabel="Account settings" @alignment="right">
     {{!-- @TODO: Add switch functionality --}}
-    <AuButton @skin="tertiary" role="menuitem">
+    <AuButton @skin="tertiary" role="menuitem" {{on "click" (fn this.selectRole)}}>
       <AuIcon @icon="switch" @alignment="left" />Wissel rol
     </AuButton>
     {{!-- @TODO: Add logout functionality --}}
