remove redundant role, remove switch button

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,17 +4,12 @@
   {{#if this.session.isAuthenticated}}
   {{!-- @TODO: Add username variable --}}
   <AuDropdown @dropdownTitle="Username" @dropdownButtonLabel="Account settings" @alignment="right">
-    {{!-- @TODO: Add switch functionality --}}
-    <AuButton @skin="tertiary" role="menuitem" {{on "click" (fn this.selectRole)}}>
-      <AuIcon @icon="switch" @alignment="left" />Wissel rol
-    </AuButton>
-    {{!-- @TODO: Add logout functionality --}}
     <AuButton @skin="tertiary" role="menuitem" {{on "click" (fn this.logout)}}>
       <AuIcon @icon="logout" @alignment="left" />Afmelden
     </AuButton>
   </AuDropdown>
   {{else}}
-  <LinkTo @route="login" role="menuitem" class="au-c-button au-c-button--tertiary">
+  <LinkTo @route="login" class="au-c-button au-c-button--tertiary">
     <AuIcon @icon="login" @alignment="left" />Aanmelden
   </LinkTo>
   {{/if}}
