--- a/app/templates/poi/show/tree.hbs
+++ b/app/templates/poi/show/tree.hbs
@@ -5,17 +5,19 @@
 <div class="au-c-body-container au-c-theme-gray-100">
   <div class="au-o-grid au-o-grid--flush au-o-grid--fixed">
     <div class="au-o-grid__item au-u-3-5 au-u-2-3@medium">
-      <ul class="au-c-tree">
-        {{#each this.sortedNodes as |node|}}
-          <Tree::Node @node={{node}} @subject={{this.poi}} class="au-c-tree__item" />
-        {{/each}}
+      <div class="au-c-tree-holder">
+        <ul class="au-c-tree">
+          {{#each this.sortedNodes as |node|}}
+            <Tree::Node @node={{node}} @subject={{this.poi}} class="au-c-tree__item" />
+          {{/each}}
+        </ul>
         <div class="au-c-upload-box">
           <div class="au-o-box au-o-box--small">
             <AuHeading @level="2" @skin="5">Foto's</AuHeading>
           </div>
           <PoiPictureManipulator @poi={{this.poi}} />
         </div>
-      </ul>
+      </div>
     </div>
     <div class="au-o-grid__item au-u-2-5 au-u-1-3@medium">
       {{outlet}}
