--- a/app/templates/poi/show/history/index.hbs
+++ b/app/templates/poi/show/history/index.hbs
@@ -1,10 +1,9 @@
 {{page-title "Index"}}
 
-<AuHeading @level="2" @skin="5" class="au-u-hidden-visually">
-  Historiek
-</AuHeading>
-
-<div class="au-o-box au-c-body-container au-c-body-container--scroll au-c-theme-gray-100">
+<div class="au-o-box au-c-body-container au-c-body-container--scroll au-c-theme-gray-100 au-u-no-focus" id="panel-3" role="tabpanel" aria-labelledby="tab-3" tabindex="0" {{auto-focus}}>
+  <AuHeading @level="2" @skin="5" class="au-u-hidden-visually">
+    Historiek
+  </AuHeading>
   <ul class="au-c-list au-c-list--timeline">
     <li class="au-c-list__item">
       <AuPill @skin="success">Gepubliceerd</AuPill> op <strong>29/04/2021 - 12:30</strong> door <strong>Inter</strong>
