--- a/app/templates/poi/show/experiences/index.hbs
+++ b/app/templates/poi/show/experiences/index.hbs
@@ -1,8 +1,7 @@
-<AuHeading @level="2" @skin="5" class="au-u-hidden-visually">
-  Tentoonstelling
-</AuHeading>
-
-<div class="au-o-box au-c-body-container au-c-body-container--scroll au-c-theme-gray-100">
+<div class="au-o-box au-c-body-container au-c-body-container--scroll au-c-theme-gray-100 au-u-no-focus" id="panel-2" role="tabpanel" aria-labelledby="tab-2" tabindex="0" {{auto-focus}}>
+  <AuHeading @level="2" @skin="5" class="au-u-hidden-visually">
+    Tentoonstelling
+  </AuHeading>
   <ul class="au-o-grid au-o-grid--tiny au-u-padding-bottom">
     {{#each @model as |experience|}}
       <li class="au-o-grid__item">
