--- a/app/templates/poi/show/tree.hbs
+++ b/app/templates/poi/show/tree.hbs
@@ -1,8 +1,7 @@
-<AuHeading @level="2" @skin="5" class="au-u-hidden-visually">
-  Toegankelijkheidsdata
-</AuHeading>
-
-<div class="au-c-body-container au-c-theme-gray-100">
+<div class="au-c-body-container au-c-theme-gray-100 au-u-no-focus" id="panel-1" role="tabpanel" aria-labelledby="tab-1" tabindex="0" {{auto-focus}}>
+  <AuHeading @level="2" @skin="5" class="au-u-hidden-visually">
+    Toegankelijkheidsdata
+  </AuHeading>
   <div class="au-o-grid au-o-grid--flush au-o-grid--fixed">
     <div class="au-o-grid__item au-u-3-5 au-u-2-3@medium">
       <div class="au-c-tree-holder">
