Only render "locatie aanpassen" for Validators
People who own the museum apparently aren't allowed to update the name.
Whether this is a hard constraint or a soft one could change over time,
se we're just hiding the button for now.

--- a/app/templates/poi/show.hbs
+++ b/app/templates/poi/show.hbs
@@ -22,10 +22,12 @@
     </AuToolbarGroup>
     <AuToolbarGroup class="au-u-h6">
       <div class="au-c-button-group">
-        <LinkTo class="au-c-button au-c-button--tertiary" @route="poi.edit" @model={{@model}}>
-          <AuIcon @icon="pencil" @alignment="left" />
-          Locatie aanpassen
-        </LinkTo>
+        {{#if this.currentAccount.roleIsValidator}}
+          <LinkTo class="au-c-button au-c-button--tertiary" @route="poi.edit" @model={{@model}}>
+            <AuIcon @icon="pencil" @alignment="left" />
+            Locatie aanpassen
+          </LinkTo>
+        {{/if}}
 
         {{!-- Send --}}
         <AuButton @skin="secondary" {{on "click" (fn (mut this.sendModal) true)}}>
