update contact field, hide history tab

--- a/app/templates/poi/show.hbs
+++ b/app/templates/poi/show.hbs
@@ -97,9 +97,9 @@
       <LinkTo class="au-c-button au-c-button--secondary" @route="poi.show.experiences.index" @model={{@model}} role="tab" aria-controls="panel-2" id="tab-2">
         Tentoonstelling
       </LinkTo>
-      <LinkTo class="au-c-button au-c-button--secondary" @route="poi.show.history.index" @model={{@model}} role="tab" aria-controls="panel-3" id="tab-3">
+      {{!-- <LinkTo class="au-c-button au-c-button--secondary" @route="poi.show.history.index" @model={{@model}} role="tab" aria-controls="panel-3" id="tab-3">
         Historiek
-      </LinkTo>
+      </LinkTo> --}}
     </div>
   </AuToolbar>
 
